Fixed white space between nav bar and hero landing section

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 .navbar {
     background-color: #34495E;
+    padding: 1rem 1rem!important;
 }
 
 .nav-link, .navbar-brand, .learn-more {
@@ -90,6 +91,11 @@ body {
 h3 {
     margin-bottom: 2em;
     text-align: left;
+}
+
+a:link, a:hover, a:active {
+    text-decoration: none;
+    color: #c0dfd9!important;
 }
 
 /*.technical-skills {*/
